# ulang

./: CMakeLists.txt  README.md
compiler/: main.c
core/: codegen.c  lexer.c  parser.c  value.c
include/ulang/: errors.h  type.h  ulang.h  value.h  variable.h
include/ulang/backend/: vm.h
include/ulang/frontend/: ast.h  codegen.h  lexer.h  parser.h
test/: test.ubyte  test.ulang
